--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="./img/sass.png" alt="sass" />
       </div>
       <div class="header__column">
-        <h1>Using Sass and CSS Animations</h1>
+        <h1>Using CSS Animations with SASS and BEM</h1>
       </div>
       <div class="header__column">
         <img src="./img/css3.png" alt="css3" />
